algorithm to get all users, patch method for calling users also doc updated
